deployments/envs/prd/vote/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-vote-app
  labels:
    app: voting-system
    component: vote
